[package]
name = "flowcalc"
description = "Flow-based programming primitives"
keywords = ["flow-based programming", "fbp", "node", "graph"]
version = "0.0.0"
license = "Apache-2.0 OR MIT"
readme = "README.md"
authors = ["Uwe Klotz <uwe.klotz@gmail.com>"]
repository = "https://github.com/uklotzde/flowcalc"
categories = ["algorithms", "data-structures"]
edition = "2018"

[dependencies]
#petgraph = "0.5"

[dev-dependencies]
bardecoder = "*"
image = "0.22"
qrcodegen = "*"
rand = "*"
resvg = { version = "*", features = ["raqote-backend"] }
usvg = "*"
